--- a/proyecto-react/src/index.scss
+++ b/proyecto-react/src/index.scss
@@ -21,3 +21,12 @@
 @import './components/Item/';
 @import './components/ItemList/';
 @import './components/ItemsDetails/index.scss';
+@import './components/Cart/index.scss';
+@import './components/Modal/index.scss';
+@import './components/Checkout/PaymentForm.scss';
+@import './components/Footer/index.scss';
+
+/* pages */
+
+@import './pages/Contact/index.scss';
+@import './pages/Home/index.scss'
